# kokkos-simple-gravity-sim

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/simplesim/: grid.hpp
src/: grid.cpp  main.cpp
